2006-06-14 [colin]	2.3.0cvs12

	* manual/dtd/manual.xsl
	* manual/sylpheed-claws-manual.xml
	* manual/fr/sylpheed-claws-manual.xml
	* manual/pl/sylpheed-claws-manual.xml
		Insert pagebreaks between sections

2006-06-14 [paul]	2.3.0cvs11

	* configure.ac
		better fix than 2.3.0cvs10

2006-06-14 [paul]	2.3.0cvs10

	* configure.ac
		fix setting of PACKAGE_DATA_DIR with newer autoconf
		(backwards compatible)

2006-06-13 [colin]	2.3.0cvs9

	* src/messageview.c
		Fix sending of return receipt with the new queue folders

2006-06-13 [wwp]	2.3.0cvs8

	* src/quote_fmt_lex.l
		fix wrong tokens returned in quote_fmt lexer, query not().

2006-06-13 [wwp]	2.3.0cvs7

	* src/folder.c
	* src/prefs_folder_item.c
		allow changing folder type even when folder is not a top-level one,
		thanks to Colin.

2006-06-12 [colin]	2.3.0cvs6

	* src/folderview.c
		Fix double-ask of "Do you want to mark all
		as read"

2006-06-12 [colin]	2.3.0cvs5

	* src/compose.c
	* src/compose.h
	* src/folder.c
	* src/folder.h
	* src/imap.c
	* src/inc.c
	* src/main.c
	* src/messageview.c
	* src/mh.c
	* src/prefs_folder_item.c
	* src/procheader.c
	* src/procmime.c
	* src/procmsg.c
	* src/procmsg.h
	* src/send_message.c
	* src/summaryview.c
	* src/toolbar.c
		Apply bug #964's patch (Queue and drafts aren't normal)
		The Drafts and Queue folder now contain RFC-822 files,
		allowing to move and copy mails from and to these 
		folders. Moving from Drafts to Queue will prepare the
		mail for sending (PGP signature, encryption, etc).
		This patch also rework sending errors handling to try
		to be more helpful.
		Also, allow redefining folder types via the GUI 
		(Folder type in its Properties)

2006-06-12 [colin]	2.3.0cvs4

	* src/summaryview.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/gedit-print.c
		Allow to define a specific print font - patch
		by Bernhard Walle <bernhard.walle@gmx.de>
	* src/prefs_fonts.c
	* manual/advanced.xml
	* manual/fr/advanced.xml
		Add a hidden pref to allow deletion without